--- a/files/my_launchpad.yaml
+++ b/files/my_launchpad.yaml
@@ -1,3 +1,3 @@
-host: "mongodb+srv://vinayak:vinu123@mymongo.z1tjl.mongodb.net:27017/fireworks"
+host: "mongodb+srv://<username>:<password>@<mongo_server>:27017/fireworks"
 logdir: null
 uri_mode: true
