--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - click==8.0.1
+    - dnspython==2.1.0
     - fireworks==1.9.7
     - flask==2.0.1
     - flask-paginate==0.8.1
